--- a/Proyecto con puntos de corte/cursos.css
+++ b/Proyecto con puntos de corte/cursos.css
@@ -109,6 +109,11 @@ nav a {
     text-align: center;
     border-radius: 5px;
     box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.3);
+    transition: 0.3s;
+}
+
+.containerintro a:hover {
+    box-shadow: 0px 0px 25px 5px rgba(255, 255, 255, 0.3);
 }
 
 .containercursos {
